fixed color contrast for secondary logo color. need to figure out how to implement and pass accessibility standards

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -630,7 +630,7 @@ pre tt:after {
 }
 
 button {
-  background: #48b04c;
+  background-color: transparent;
   color: white;
   border: none;
   cursor: pointer;
@@ -640,7 +640,7 @@ button {
 #simple-link a:link,
 #simple-link a:visited {
   color: white;
-  background-color: #48b04c;
+  background-color: #2d5b2d;
   padding: 0.25rem 0.25rem;
 }
 
@@ -690,7 +690,7 @@ button {
     margin: 0 auto;
   }
   .link-box {
-    background: #48b04c;
+    background: #2d5b2d;
     height: 200px;
     width: 250px;
     padding-top: 50px;
